<?xml version="1.0"?>
<package format="3">
  <name>dq_control</name>
  <version>0.0.0</version>
  <description>The dq_control package</description>

  <maintainer email="bastien.mourin@sigma-clermont.fr">Bastien Mourin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dq_operations</depend>
  <depend>rclcpp</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

